# cosmonaut-infra

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/workflows/: apply.yml  plan.yml
docs/: README.md  audio-implementation.md  cloudflare-setup.md  email-password-auth-setup.md  project-description.md  structure.md
envs/dev/: backend.tf  main.tf
envs/prod/: backend.tf  main.tf
lambdas/custom_message/: index.py
lambdas/pre_sign_up/: index.py
modules/cicd/: main.tf  outputs.tf  variables.tf
modules/compute/: alarms.tf  iam.tf  main.tf  outputs.tf  variables.tf
modules/dns/: main.tf  outputs.tf  variables.tf
modules/email/: main.tf  outputs.tf  variables.tf
modules/frontend/: main.tf  outputs.tf  public_key.pem  variables.tf
modules/frontend/functions/: viewer-request.js
modules/identity/: main.tf  outputs.tf  variables.tf
modules/images/: main.tf  outputs.tf  variables.tf
modules/persistence/: main.tf  outputs.tf
modules/secrets/: main.tf  outputs.tf  variables.tf
modules/static_content/: main.tf  outputs.tf  variables.tf
placeholder/: index.html
scripts/: setup_secrets.sh
